add database config

--- a/Back-End-Server/src/main/resources/application.properties
+++ b/Back-End-Server/src/main/resources/application.properties
@@ -4,11 +4,10 @@ spring.application.name=vote-service
 #Postgres:
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/db
-spring.datasource.username=product
-spring.datasource.password=product@123
+spring.datasource.username=prod
+spring.datasource.password=prod@123
 
 #JPA:
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
