add configuration and notes

--- a/Back-End-Server/src/main/resources/application.properties
+++ b/Back-End-Server/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=vote-service
 
 #Postgres:
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/db
+spring.datasource.url=jdbc:postgresql://localhost:5432/produto
 spring.datasource.username=prod
 spring.datasource.password=prod@123
 
