build back end server and made tests with postman

--- a/Back-End-Server/src/main/resources/application.properties
+++ b/Back-End-Server/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #Application:
-spring.application.name=vote-service
+spring.application.name=productmanager
 
 #Postgres:
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/produto
+spring.datasource.url=jdbc:postgresql://localhost:5432/db
 spring.datasource.username=prod
 spring.datasource.password=prod@123
 
@@ -11,3 +11,8 @@ spring.datasource.password=prod@123
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+#Security
+security.oauth2.client.scope=password
+security.oauth2.client.client-id=product
+security.oauth2.client.client-secret=product@123
