--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,9 @@ services:
     environment: 
         - POSTGRES_USER=prod
         - POSTGRES_PASSWORD=prod@123
-        - POSTGRES_DB=produto
+        - POSTGRES_DB=db
         
-    container_name: DB-Server
+    container_name: db-server
     expose:
       - 5432
     ports: 
@@ -28,23 +28,21 @@ services:
     
   
   #Back-end Server   
-  # backend-server:
-    # build:
-      # context: .
-      # dockerfile: Dockerfile
-    # #image: rogeriodcb/vote-service:latest
-    # network_mode: bridge
-    # container_name: Back-End-Server
-    # environment:
-      # - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/db
-      # - TZ=America/Sao_Paulo
-      
-    # expose:
-      # - 8081
-    # ports:
-      # - 8081:8081
-    # depends_on:
-      # - db
-
-    # links:
-      # - db
+  back-end-server:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    network_mode: bridge
+    container_name: back-end-server
+    #image: rogeriodcb/productmanager:latest
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db-server:5432/db
+      - TZ=America/Sao_Paulo
+    expose:
+      - 8080
+    ports:
+      - 8080:8080
+    depends_on:
+      - db
+    links:
+      - db
